Refactor & Fix Velocity startup